RESOLVED FIXED193984
[Cocoa][EME] persistent-usage-record data not issued after MediaKeySession.remove()
https://bugs.webkit.org/show_bug.cgi?id=193984
Summary [Cocoa][EME] persistent-usage-record data not issued after MediaKeySession.re...
Jer Noble
Reported 2019-01-29 14:29:29 PST
[Cocoa] persistent-usage-record data not issued after MediaKeySession.remove()
Attachments
Patch (5.53 KB, patch)
2019-01-29 15:45 PST, Jer Noble
no flags
Patch (5.56 KB, patch)
2019-01-30 10:15 PST, Jer Noble
no flags
Radar WebKit Bug Importer
Comment 1 2019-01-29 14:30:29 PST
Jer Noble
Comment 2 2019-01-29 15:45:45 PST
Jer Noble
Comment 3 2019-01-30 10:15:50 PST
WebKit Commit Bot
Comment 4 2019-01-30 17:53:01 PST
Comment on attachment 360590 [details] Patch Clearing flags on attachment: 360590 Committed r240746: <https://trac.webkit.org/changeset/240746>
WebKit Commit Bot
Comment 5 2019-01-30 17:53:02 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.