Source/WebCore/Modules/encryptedmedia/MediaKeySession.h
@@ -87,6 +87,7 @@ private:
     // CDMInstanceSessionClient
     void updateKeyStatuses(CDMInstanceSessionClient::KeyStatusVector&&) override;
     void sendMessage(CDMMessageType, Ref<SharedBuffer>&& message) final;
+    void sessionIdChanged(const String&) final;
 
     // EventTarget
     EventTargetInterface eventTargetInterface() const override { return MediaKeySessionEventTargetInterfaceType; }
